--- a/src/Components/css/Components/navbar.css
+++ b/src/Components/css/Components/navbar.css
@@ -15,6 +15,17 @@
     color: white;
 
 }
+.logo{
+    display: flex;
+    gap: 10px;
+}
+.logo h2{
+    color: #314c38;
+    background-color: yellow;
+    padding: 8px;
+    border-radius: 50%;
+}
+
 .logo img{
     width: 20px;
     height: 20px;
