--- a/src/Components/css/Components/navbar.css
+++ b/src/Components/css/Components/navbar.css
@@ -13,22 +13,35 @@
     display: flex;
     justify-content: space-between;
     color: white;
+    font-weight: 600;
+    font-family: sans-serif;
 
 }
 .logo{
     display: flex;
-    gap: 10px;
+    gap: 5px;
 }
 .logo h2{
     color: #314c38;
-    background-color: yellow;
-    padding: 8px;
-    border-radius: 50%;
+    background-color: #f9ad1b;
+    padding: 5px;
+    border-radius: 30px;
 }
-
+.logo h3{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    
+}
 .logo img{
     width: 20px;
     height: 20px;
     
 }
 
+.contactbtn button{
+    border-radius: 30px;
+    padding: 8px;
+    border: none;
+}
